force-app/main/default/objects/Correo_Personas_Sin_Aportar__c/Correo_Personas_Sin_Aportar__c.object-meta.xml
<CustomObject>
    <description>Objeto donde se guardara la informacion de las personas a las que se les envio correo cuando tengan mas de 6 meses sin aportar</description>
    <label>Correo Personas Sin Aportar</label>
    <nameField>
        <label>Nombre de Correo Retiros Totales</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Correo Personas Sin Aportars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>