force-app/main/default/objects/Correo_Personas_Sin_Aportar__c/fields/Correo__c.field-meta.xml
<CustomField>
    <fullName>Correo__c</fullName>
    <label>Correo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>