force-app/main/default/objects/Correo_Personas_Sin_Aportar__c/fields/Fecha_Inclusion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inclusion__c</fullName>
    <description>En esta parte se guardara la fecha. para el primer envio del correo.
Este campo servira para luego de que hayan pasado 6 meses despues del primer envio se vuelva a enviar un correo</description>
    <label>Fecha Inclusion</label>
    <type>Date</type>
</CustomField>